# code-notes

./: .gitignore  README.md
AndroidEventDispatch/app/: build.gradle
android/: README.md
android/CBApplicationSingleton/: settings.gradle
android/CBElevation/: settings.gradle
android/CBGestureDetector/: settings.gradle
android/CBPinch/: settings.gradle
android/CBRotateSave/: settings.gradle
android/CBSendEmailAttachments/: settings.gradle
android/CBService/: settings.gradle
android/CBSharedPreferences/: settings.gradle
android/Canvas/: settings.gradle
android/Compose/: settings.gradle
android/EventDispatch/: build.gradle  settings.gradle
android/Fresco/: settings.gradle
android/LifecycleOwner/: settings.gradle
android/MotionEventDispatch/: settings.gradle
android/SelfDefineView/: settings.gradle
android/SendEmailAttachments/: settings.gradle
android/StrictMode/: settings.gradle
android/ViewCoordinate/: build.gradle
android/ViewOnPreDraw/: settings.gradle
android/ViewTreeObserver/: settings.gradle
android/Widget/: settings.gradle
android/activity/: README.md
android/animation/: README.md  settings.gradle
android/animation_drawable/: README.md  settings.gradle
android/base_android_project/: settings.gradle
c++/: README.md
c++/linux-signal-process/: CMakeLists.txt  README.md  main.cpp  notes.md
c++/linux-signal-process/include/: Application.h  SignalHandler.h  SignalManager.h
c++/linux-signal-process/src/: Application.cpp  SignalHandler.cpp  SignalManager.cpp
go/: README.md
go/chanel/: go.mod  (+1 more)
java/: README.md
(+670 files in other folders)
